--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+#buying {
+  text-align: center;
+}
 #main {
   text-align: center;
   margin: -5px 0px 0px 0px;
@@ -8,7 +11,7 @@
 }
 #advert {
   text-align: center;
-  margin: -10px 0px 0px 0px;
+  margin: -30px 0px 0px 0px;
   font-size: 75px;
   font-family: monospace;
   background: url(Colour.jpg);
@@ -34,4 +37,9 @@
   transform: translate(-50%,-50%);
   position: absolute;
   border: solid 10px #50f442;
+}
+img {
+  float: right;
+  height: 125px;
+  width: 125px;
 }
